--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
+  },
+  "scripts": {
+    "start": "hexo s"
   }
 }
